[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
alloc = ["dep:heapless"]
std = ["alloc"]

[dev-dependencies]
rayon =  "1"

[dependencies]
heapless = {version = "0.8", optional = true}
